<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/title_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/titulo_cadastro"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/container_components"
        style="@style/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/title_registration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="370dp" />

    <EditText
        android:id="@+id/edit_name"
        style="@style/edit_text"
        android:hint="@string/nome_completo"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@id/container_components"
        app:layout_constraintStart_toStartOf="@id/container_components"
        app:layout_constraintEnd_toEndOf="@id/container_components"
        android:layout_marginTop="70dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/edit_text"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/container_components"
        app:layout_constraintStart_toStartOf="@id/container_components"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        android:layout_marginTop="20dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_password"
        style="@style/edit_text"
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@id/container_components"
        app:layout_constraintStart_toStartOf="@id/container_components"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        android:layout_marginTop="20dp"
        android:autofillHints="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_registration"
        style="@style/button"
        android:text="@string/cadastrar"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_components" />

</androidx.constraintlayout.widget.ConstraintLayout>